    * notification area plugin updated to support appindicate by Luca Invernizzi and Jono Bacon
    * gtg_new task now supports command switches by Luca Invernizzi
    * Fix bug #511651, white space around title, by mrk
    * Expanded CLI to gtg to support task descriptions by Bryce Harrington
    * Added a guide to plugins by Chris Johnston
    * RTM plugin tags synchronization by Luca Invernizzi
    * Evolution plugin by Luca Invernizzi
    * Tomboy support by Luca Invernizzi
    * Dbus autostart by Gordon Ball and Luca Invernizzi
    * Notification area bug fixes by Luca Invernizzi

2009-12-11 Getting Things GNOME! 0.2.1
    * Schedule for context menu by Bryce Harrington
    * Improved export feature by Bryce Harrington and Luca Invernizzi
    * Restore closed tasks filtering by selected tag, fixes bug #498857
    * Temporary fix allowing to reset tag color by Matthew Rasmus
    * Added the ability to add a tag from the right click menu in the task browser, by Matthew Rasmus.
    * Better explanation of the "Work view" concept in documentation
    * Multiple selection
    * API clarifications
    * Cut & Paste improvements
    * Notification area plugin improvements
    * Icons reflect action availability
    * Misc. editor bug fixes
    * Misc. tag list bug fixes

2009-12-11 Getting Things GNOME! 0.2
    * Bugs fixes from 0.1.9

2009-12-02 Getting Things GNOME! 0.1.9
    * Support non-exact ("fuzzy") due dates: 'now', 'soon', and 'later' by Kevin Mehall
    * Fixes a bug with gtk stock strings being marked as translatable, by Henning Eggers (#490231)
    * When a task is deleted, all subtask are deleted as well by Mikkel Kjær Jensen
    * Groups for tags and subtags by Kevin Mehall
    * GNOME bugzilla plugin by Guillaume Desmottes
    * Handle tasks spatially (remember position & size)
    * Opened tasks on quit are reopened on start
    * Remove the "File" menu. We have no files, we have tasks!    