@@ -53,3 +53,4 @@ For 0.2.1:
 For 0.3:
 ----------
 * Chris Johnston <chrisjohnston@ubuntu.com>
+* Tom Van Braeckel <tomvanbraeckel@gmail.com>
