@@ -1,3 +1,4 @@
+    * Improve RTM plugin (bug #520427): don't sync tasks from archived lists 
     * notification area plugin updated to support appindicate by Luca Invernizzi and Jono Bacon
     * gtg_new task now supports command switches by Luca Invernizzi
     * Fix bug #511651, white space around title, by mrk
